# irc

./: .before_install.sh  .clang-format  .clang-format.swp  .clang-tidy  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  cmake-variants.yaml  codecov.yml  config.cmake.in  format.sh
.github/workflows/: cmake.yml
.travis/: before_install.sh  build.sh  cov.sh  install.sh
include/: atom.h  io.h  irc.h  libirc.h  linalg.h  molecule.h
include/eigen/plugins/: Array_initializer_list.h
include/libirc/: atom.h  connectivity.h  constants.h  conversion.h  io.h  irc.h  linalg.h  mathtools.h  molecule.h  periodic_table.h  transformation.h  wilson.h
include/libirc/plugins/eigen/: Matrix_initializer_list.h
molecules/: 2-butyne.xyz  caffeine.xyz  carbon_dioxide.xyz  ethane.xyz  ethane1.xyz  ethane2.xyz  formaldehyde.xyz  glycerol.xyz  hcn.xyz  hydrogen_peroxide.xyz  indene.xyz  issue41.xyz  methanol.xyz  octane.xyz  phenol.xyz  toluene.xyz  water_dimer_1.xyz  water_dimer_2.xyz
src/: config.h.in
src/atoms/: atom.cpp  atom.h  atom_test.cpp  molecule.cpp  molecule.h  molecule_test.cpp  periodic_table.cpp  periodic_table.h  periodic_table_test.cpp
src/connectivity/: connectivity.cpp  connectivity.h  connectivity_test.cpp  wilson.h  wilson_test.cpp
src/io/: io.h  io_test.cpp
src/irc/: irc.cpp  irc.h  irc_test.cpp
src/linear_algebra/: arma_wrapper.h  eigen_wrapper.h  linalg.h
src/test/: CMakeLists.txt  atom_test.cpp  config.h.in  connectivity_test.cpp  io_test.cpp  irc_test.cpp  linalg_test.cpp  mathtools_test.cpp  molecule_test.cpp  periodic_table_test.cpp  test.cpp  transformation_test.cpp  wilson_test.cpp
src/tools/: compare.cpp  compare.h  compare_test.cpp  comparison.cpp  comparison.h  comparison_test.cpp  constants.h  conversion.h  math.cpp  math.h  math_test.cpp  mathtools.cpp
src/transformation/: transformation.h  transformation_test.cpp
src/wilson/: wilson.h  wilson_test.cpp
test/: benzene_dimer.xyz  ethanol.xyz  water.xyz
tools/: clang-format.sh  clang-tidy.sh
